--- a/src/Pages/Discover/Components/Banner/Buttons/Buttons.module.css
+++ b/src/Pages/Discover/Components/Banner/Buttons/Buttons.module.css
@@ -10,13 +10,33 @@
     z-index: 2;
     left: 30%;
 }
+
 .nextBtn {
     rotate: -45deg;
     position: absolute;
     top: 0;
 }
+
 .prevBtn {
     position: absolute;
     bottom: 0;
     rotate: -135deg;
+}
+
+@media only screen and (max-width:765px) {
+    .btn {
+        top: calc(50% - 2rem)
+    }
+
+    .nextBtn {
+        left: calc(100% - 2rem);
+        rotate: 90deg;
+        position: absolute;
+    }
+
+    .prevBtn {
+        left: 0%;
+        position: absolute;
+        rotate: -90deg;
+    }
 }
