--- a/src/Pages/Discover/Components/Banner/BannerButtons/Buttons.module.css
+++ b/src/Pages/Discover/Components/Banner/BannerButtons/Buttons.module.css
@@ -1,24 +1,24 @@
 .btn {
     background-color: transparent;
-    position: relative;
     border: none;
-    width: 100%;
-    height: 100%;
     padding: 0;
     width: 2rem;
     height: 2rem;
     z-index: 2;
     left: 30%;
+    position: absolute;
+}
+
+.btn:active svg {
+    fill: rgb(128, 128, 128);
 }
 
 .nextBtn {
     rotate: -45deg;
-    position: absolute;
     top: 0;
 }
 
 .prevBtn {
-    position: absolute;
     bottom: 0;
     rotate: -135deg;
 }
@@ -31,12 +31,10 @@
     .nextBtn {
         left: calc(100% - 2rem);
         rotate: 90deg;
-        position: absolute;
     }
 
     .prevBtn {
         left: 0%;
-        position: absolute;
         rotate: -90deg;
     }
 }
