--- a/src/Pages/Discover/Components/Banner/InfoItem/InfoItem.module.css
+++ b/src/Pages/Discover/Components/Banner/InfoItem/InfoItem.module.css
@@ -1,7 +1,7 @@
 .itemInfo {
     visibility: hidden;
     position: absolute;
-    bottom: 45%;
+    bottom: 40%;
     left: 2%;
 }
 
@@ -14,6 +14,17 @@
 .logoImg {
     width: 10vw;
     max-width: 13rem;
+}
+
+.price {
+    display: flex;
+    white-space: nowrap;
+    font-size: 1vw;
+}
+
+.space {
+    margin-right: 5px;
+    display: inline-block;
 }
 
 #intialBanner {
@@ -69,6 +80,14 @@
     .itemInfo {
         bottom: 10%;
         left: calc(50% - 15vw);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .price {
+        font-size: 4vw;
     }
 
     @keyframes fadeout {
@@ -90,5 +109,11 @@
             opacity: 1;
 
         }
+    }
+}
+
+@media (min-width:2134px) {
+    .price {
+        font-size: 1.2rem;
     }
 }
