--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,29 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #181818;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #272727;
+    border-radius: 5px;
+    opacity: 0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #303030;
+    opacity: 0;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: rgb(114, 114, 114);
+}
+
 #root {
     display: flex;
     flex-direction: column;
