Free Games comp is now responsive & some bug fixed

--- a/src/Pages/Discover/Components/FreeGames/FreeGames/FreeGames.module.css
+++ b/src/Pages/Discover/Components/FreeGames/FreeGames/FreeGames.module.css
@@ -21,8 +21,8 @@
 
 .games {
     display: grid;
-    grid-column-gap: 1rem;
-    padding: 0 3rem 2rem 3rem;
+    grid-column-gap: 0.5rem;
+    padding: 0 2rem;
 }
 
 .header img {
@@ -30,14 +30,12 @@
     margin-right: 1rem;
 }
 
-@media only screen and (max-width: 765px) {
-    .freeGames {
-        width: 98vw;
-    }
-}
-
-@media (max-width: 1023px) and (min-width: 766px) {
+@media (max-width: 1023px) {
     .freeGames {
         width: 97vw;
+        padding: 0.1rem 0;
+    }
+    .games {
+        padding: 0 1rem;
     }
 }
