--- a/src/Pages/Discover/Components/Banner/InfoItem/InfoItem.module.css
+++ b/src/Pages/Discover/Components/Banner/InfoItem/InfoItem.module.css
@@ -37,13 +37,15 @@
     opacity: 0;
     z-index: 1;
     visibility: visible;
-    animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 300ms 1 normal forwards running fadeIn;
+    animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 300ms 1 normal forwards
+        running fadeIn;
 }
 
 #bannerFadeOut {
     opacity: 0;
     visibility: hidden;
-    animation: 100ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards running fadeout;
+    animation: 100ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards
+        running fadeout;
 }
 
 @keyframes fadeout {
@@ -72,14 +74,14 @@
     }
 }
 
-@media only screen and (max-width:765px) {
+@media only screen and (max-width: 765px) {
     .logoImg {
         width: 30vw;
     }
 
     .itemInfo {
         bottom: 10%;
-        left: calc(50% - 15vw);
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -107,12 +109,11 @@
 
         100% {
             opacity: 1;
-
         }
     }
 }
 
-@media (min-width:2134px) {
+@media (min-width: 2134px) {
     .price {
         font-size: 1.2rem;
     }
