--- a/src/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
+++ b/src/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
@@ -1,11 +1,33 @@
+.freeGame {
+    cursor: pointer;
+    position: relative;
+    transition: filter 300ms;
+}
+.freeGame:hover {
+    filter: drop-shadow(0px 0px 5px rgba(177, 177, 177, 0.616)) brightness(1.1);
+}
+
 .gameHeader {
     width: 100%;
+    margin-bottom: 2rem;
 }
 
 .gameHeader img {
     border-radius: 5px 5px 0 0;
     width: 100%;
-    aspect-ratio: 1/1;
+    aspect-ratio: 1/1.4;
+}
+
+.gameDetail {
+    padding-bottom: 2rem;
+}
+
+.gameDetail p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .freeNow {
@@ -26,5 +48,10 @@
 .date {
     position: absolute;
     color: rgb(173, 173, 173);
-    bottom: 1rem;
+    bottom: 0;
+}
+@media only screen and (max-width: 272px) {
+    .gameDetail {
+        padding-bottom: 3rem;
+    }
 }
