--- a/src/Pages/Discover/Components/Banner/Items/Items.module.css
+++ b/src/Pages/Discover/Components/Banner/Items/Items.module.css
@@ -2,12 +2,13 @@
     width: 75vw;
     aspect-ratio: 1.77777778/1;
     max-width: 1600px;
+    display: flex;
+    justify-content: center;
 }
 
-@media only screen and (max-width:1023px) and (min-width:766px) {
+@media only screen and (max-width: 1023px) and (min-width: 766px) {
     .carouselItems {
         width: 97vw;
         aspect-ratio: 1.77777778/1;
     }
-
 }
