--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0;
+    box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: #181818;
