--- a/src/Pages/Discover/Components/Banner/ItemCard/ItemCard.module.css
+++ b/src/Pages/Discover/Components/Banner/ItemCard/ItemCard.module.css
@@ -58,20 +58,19 @@
     align-items: center;
     z-index: -1;
     opacity: 0;
-    transition: translate .2s, opacity 500ms;
+    transition: translate 0.2s, opacity 500ms;
     border-radius: 0 5px 5px 0;
-    font-size: .8rem;
+    font-size: 0.8rem;
 }
 
 #first .cardName {
     translate: 6.05vw;
     opacity: 1;
-    transition-delay: .5s;
-
+    transition-delay: 0.5s;
 }
 
 #first .cardName::after {
-    content: "";
+    content: '';
     background-color: rgb(22, 22, 22);
     z-index: -1;
     top: 0;
@@ -103,7 +102,7 @@
     }
 }
 
-@media only screen and (max-width:1023px) {
+@media only screen and (max-width: 1023px) {
     .cards button {
         background-color: transparent;
         width: 7.84vw;
