--- a/src/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
+++ b/src/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
@@ -22,18 +22,24 @@
     margin: 1rem 0;
 }
 
-.ExploreTexts button {
+.ExploreTexts a {
     padding: 1rem 2rem;
     border-radius: 5px;
+    margin-top: 1rem;
+    display: inline-block;
+    text-decoration: none;
+    color: black;
     cursor: pointer;
     transition: all 300ms;
+    background-color: white;
+    border: 1px solid white;
 }
-.ExploreTexts button:hover {
-    background-color: black;
+.ExploreTexts a:hover {
+    background-color: rgba(0, 0, 0, 0.4);
     color: white;
     border: 1px solid white;
 }
-.ExploreTexts button:active {
+.ExploreTexts a:active {
     background-color: rgb(78, 78, 78);
 }
 @media only screen and (max-width: 1024px) and (min-width: 357px) {
