--- a/src/Pages/Discover/Components/Banner/BannerButtons/Buttons.module.css
+++ b/src/Pages/Discover/Components/Banner/BannerButtons/Buttons.module.css
@@ -4,7 +4,7 @@
     padding: 0;
     width: 2rem;
     height: 2rem;
-    z-index: 2;
+    z-index: 1;
     left: 30%;
     position: absolute;
 }
@@ -23,9 +23,9 @@
     rotate: -135deg;
 }
 
-@media only screen and (max-width:765px) {
+@media only screen and (max-width: 768px) {
     .btn {
-        top: calc(50% - 2rem)
+        top: calc(50% - 2rem);
     }
 
     .nextBtn {
