--- a/src/Pages/Discover/Components/EventGames/ChangeEventButtons/ChangeEventButtons.module.css
+++ b/src/Pages/Discover/Components/EventGames/ChangeEventButtons/ChangeEventButtons.module.css
@@ -10,10 +10,14 @@
 }
 .button {
     background-color: rgb(255, 255, 255);
+    cursor: pointer;
     padding: 3px;
     border-radius: 50%;
     border: 1px solid rgb(0, 0, 0);
     transition: background-color 400ms, border 400ms;
+}
+.button:hover {
+    background-color: rgb(160, 160, 160);
 }
 #active {
     background-color: rgb(0, 0, 0);
