--- a/src/Pages/Discover/Components/EventGames/GameColumn/GameInColumn.module.css
+++ b/src/Pages/Discover/Components/EventGames/GameColumn/GameInColumn.module.css
@@ -7,6 +7,8 @@
     justify-content: stretch;
     align-items: stretch;
     align-content: stretch;
+    width: calc(100% - (0.4rem + 2rem));
+    aspect-ratio: 2.53/1;
 }
 
 .GameColumn:hover {
@@ -21,33 +23,35 @@
     height: 100%;
 }
 .image img {
-    width: 100%;
     height: 100%;
+    aspect-ratio: 0.0708502024/1;
     object-fit: cover;
 }
 
 .gameDetails {
     width: 70%;
     margin-left: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
 }
 
 .name {
-    font-size: 0.9rem;
+    font-size: 14px;
     font-weight: 400;
-    margin: 0;
+    margin-bottom: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
     .GameColumn {
         padding: 0.1rem;
-        margin: 0.3rem 0.3rem;
+        margin: 0.3rem 0rem 0.3rem 1rem;
+    }
+}
+@media only screen and (min-width: 1600px) {
+    .name {
+        font-size: 16px;
     }
 }
