--- a/src/Pages/Discover/Components/Shared/DiscountPriceWithPercent/DiscountPriceWithPercent.module.css
+++ b/src/Pages/Discover/Components/Shared/DiscountPriceWithPercent/DiscountPriceWithPercent.module.css
@@ -1,15 +1,14 @@
 .DiscountPriceWithPercent {
     display: flex;
-    justify-content: space-between;
     width: 100%;
+    font-size: 10px;
 }
 
 .discountPercentage {
-    width: 30%;
-    margin-right: 5px;
+    margin-right: 10px;
     background-color: rgb(0, 116, 228);
     text-align: center;
-    padding: .5rem;
+    padding: 7px 10px;
     border-radius: 5px;
 }
 
@@ -18,11 +17,11 @@
 }
 
 .dicountFontSize {
-    font-size: .8rem;
+    font-size: 14px;
 }
 
-@media (min-width:2134px) {
+@media only screen and (min-width: 2134px) {
     .dicountFontSize {
-        font-size: 1rem;
+        font-size: 16px;
     }
 }
