--- a/src/Pages/Discover/Components/Banner/Banner/Banner.module.css
+++ b/src/Pages/Discover/Components/Banner/Banner/Banner.module.css
@@ -11,7 +11,7 @@
 
 @media only screen and (max-width: 768px) {
     .bannerOverflow {
-        width: 100vw;
+        width: calc(100vw - 8px);
         aspect-ratio: 1/1.0675;
         display: flex;
         justify-content: center;
