browse Page header added

--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,7 @@
 body {
     margin: 0;
     box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     background-color: #181818;
-    color: white;
-    font-family: 'Inter', sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -38,4 +34,9 @@ body {
     flex-direction: column;
     align-items: center;
     position: relative;
+    background-color: #181818;
+    font-family: 'Inter', sans-serif;
+    color: rgb(222, 222, 222);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
