--- a/src/Pages/Discover/Components/Banner/Item/Item.module.css
+++ b/src/Pages/Discover/Components/Banner/Item/Item.module.css
@@ -38,7 +38,7 @@
     border-radius: 5px;
 }
 
-#intialBanner {
+#initialBanner {
     opacity: 1;
     z-index: 1;
     visibility: visible;
@@ -48,13 +48,15 @@
     opacity: 0;
     z-index: 1;
     visibility: visible;
-    animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 200ms 1 normal forwards running fadeIn;
+    animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 200ms 1 normal forwards
+        running fadeIn;
 }
 
 #bannerFadeOut {
     opacity: 0;
     visibility: hidden;
-    animation: 300ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards running fadeout;
+    animation: 300ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards
+        running fadeout;
 }
 
 @keyframes fadeout {
@@ -98,7 +100,7 @@
     }
 }
 
-@media only screen and (max-width:1023px) and (min-width:766px) {
+@media only screen and (max-width: 1023px) and (min-width: 766px) {
     .carouselItem {
         width: 97vw;
         aspect-ratio: 1.77777778/1;
@@ -109,5 +111,4 @@
         aspect-ratio: 1.77777778/1;
         border-radius: 5px;
     }
-
 }
