--- a/src/Pages/Discover/Components/Games/CardsHeader/CardsHeader.module.css
+++ b/src/Pages/Discover/Components/Games/CardsHeader/CardsHeader.module.css
@@ -1,7 +1,7 @@
 .CardsHeader {
     background-color: transparent;
     display: inline;
-    color: white;
+    color: rgb(222, 222, 222);
     margin: 0;
     cursor: pointer;
 }
