--- a/src/Pages/Discover/Components/Banner/Item/Item.module.css
+++ b/src/Pages/Discover/Components/Banner/Item/Item.module.css
@@ -86,11 +86,13 @@
 
     75% {
         opacity: 1;
+        visibility: visible;
     }
 
     100% {
         transform: translateX(0);
         opacity: 1;
+        visibility: visible;
     }
 }
 
