--- a/src/Pages/Browse/Browse/Browse.module.css
+++ b/src/Pages/Browse/Browse/Browse.module.css
@@ -1,6 +1,19 @@
 .browse {
     width: 75vw;
+    max-width: 1600px;
 }
 .mainContent {
     display: flex;
+}
+
+@media (max-width: 1023px) and (min-width: 766px) {
+    .browse {
+        width: 97vw;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .browse {
+        width: 98vw;
+    }
 }
