--- a/src/Pages/Browse/Components/GameCards/GameCards.module.css
+++ b/src/Pages/Browse/Components/GameCards/GameCards.module.css
@@ -1,3 +1,23 @@
 .gameCards {
-    width: 80%;
+    width: 75%;
+    margin-bottom: 3rem;
+}
+
+.gameCards ul {
+    list-style: none;
+    display: grid;
+    padding: 10px 5px;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 3rem 1rem;
+}
+
+@media only screen and (max-width: 1600px) and (min-width: 769px) {
+    .gameCards ul {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+@media only screen and (max-width: 768px) and (min-width: 200px) {
+    .gameCards ul {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
