--- a/src/Pages/Discover/Components/EventGames/Components/GamesColumn/GamesColumn.module.css
+++ b/src/Pages/Discover/Components/EventGames/Components/GamesColumn/GamesColumn.module.css
@@ -6,8 +6,7 @@
     border-right: 1px solid rgba(148, 148, 148, 0.486);
 }
 .column {
-    padding: 0;
-    margin: 0;
+    padding: 10px;
     list-style: none;
 }
 .heading {
@@ -33,7 +32,7 @@
     font-size: 1rem;
 }
 @media only screen and (max-width: 768px) {
-    .Opcity0 {
+    .Opacity0 {
         opacity: 0;
     }
     .GameColumn {
