--- a/src/Shared/SecondNavbar/Components/SecondNavSearchField/SecondNavSearchField.module.css
+++ b/src/Shared/SecondNavbar/Components/SecondNavSearchField/SecondNavSearchField.module.css
@@ -1,7 +1,3 @@
-#show #searchIcon {
-    fill: rgb(0, 0, 0);
-}
-
 .searchField {
     background-color: rgb(44, 44, 44);
     display: flex;
@@ -13,10 +9,11 @@
     height: 40px;
     z-index: 1;
 }
+#show #searchIcon {
+    fill: rgb(0, 0, 0);
+}
 .searchField input {
     background-color: rgb(44, 44, 44);
-    padding: 0;
-    font-family: 'Inter', sans-serif;
     border: none;
     font-size: 1rem;
     width: 100%;
@@ -62,19 +59,17 @@
         left: -10px;
         margin-left: 10px;
         transition: all 300ms;
+        z-index: 2;
     }
     #show {
         padding: 0 10px;
-        width: calc(100% - 20px);
+        width: 100%;
         background-color: white;
         position: absolute;
-        margin-left: 0px;
-        padding-left: 20px;
         border-radius: 0;
         z-index: 3;
     }
     #hide {
         width: 25px;
-        z-index: inherit;
     }
 }
