--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-body {
-    margin: 0;
+html {
     box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+    font-family: 'Inter', sans-serif;
+}
+
+body {
     background-color: #181818;
 }
 
@@ -40,7 +49,7 @@ body {
 #root {
     position: relative;
     background-color: #181818;
-    font-family: 'Inter', sans-serif;
+
     color: rgb(222, 222, 222);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -50,4 +59,9 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+/* Common css */
+
+.hover-shadow:hover {
+    filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616)) brightness(1.1);
 }
