--- a/src/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
+++ b/src/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
@@ -1,6 +1,5 @@
 .BrowseHeader {
     width: 100%;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -8,4 +7,10 @@
 .NumberOfGames {
     font-size: 22px;
     font-weight: 600;
+}
+
+@media only screen and (max-width: 768px) {
+    .NumberOfGames {
+        width: 100%;
+    }
 }
