--- a/src/Pages/Browse/Components/FilterGames/Components/FilterOption/FilterOption.module.css
+++ b/src/Pages/Browse/Components/FilterGames/Components/FilterOption/FilterOption.module.css
@@ -1,4 +1,4 @@
-.FilterOption {
+.filterOption {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -6,9 +6,11 @@
     position: relative;
     margin: 20px 0;
     padding-right: 42px;
+    transition: filter 200ms;
 }
 .text {
     user-select: none;
+    -webkit-user-select: none;
     font-size: 14px;
     line-height: 18px;
 }
@@ -54,6 +56,7 @@
 .borderBot::after {
     content: '';
     position: absolute;
+    pointer-events: none;
     background-color: rgba(255, 255, 255, 0.5);
     width: 100%;
     height: 1px;
