--- a/src/Pages/Browse/Components/GameCards/GameCards.module.css
+++ b/src/Pages/Browse/Components/GameCards/GameCards.module.css
@@ -11,13 +11,36 @@
     gap: 3rem 1rem;
 }
 
-@media only screen and (max-width: 1600px) and (min-width: 769px) {
+@media only screen and (max-width: 1600px) and (min-width: 865px) {
     .gameCards ul {
         grid-template-columns: repeat(4, 1fr);
     }
 }
-@media only screen and (max-width: 768px) and (min-width: 200px) {
+@media only screen and (max-width: 864px) and (min-width: 769px) {
+    .gameCards {
+        width: 70%;
+    }
     .gameCards ul {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media only screen and (max-width: 768px) and (min-width: 553px) {
+    .gameCards ul {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+@media only screen and (max-width: 552px) and (min-width: 250px) {
+    .gameCards ul {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media only screen and (max-width: 250px) {
+    .gameCards ul {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+@media only screen and (max-width: 768px) {
+    .gameCards {
+        width: 100%;
     }
 }
