--- a/src/Shared/FirstNavbar/FirstNavBar/FirstNavbar.module.css
+++ b/src/Shared/FirstNavbar/FirstNavBar/FirstNavbar.module.css
@@ -3,6 +3,7 @@
     align-items: stretch;
     width: 100%;
     background-color: #222222;
+    position: relative;
 }
 .navOptions {
     display: flex;
