--- a/src/Pages/Browse/Components/FilterGames/Components/FilterRangeOption/Components/RangeInput/Components/RangeInputField/RangeInputField.module.css
+++ b/src/Pages/Browse/Components/FilterGames/Components/FilterRangeOption/Components/RangeInput/Components/RangeInputField/RangeInputField.module.css
@@ -4,7 +4,11 @@
   color: white;
   border: 1px solid grey;
   background-color: #222;
+  transition: border 100ms;
   outline: none;
+}
+.input:hover {
+  border: 1px solid rgb(6, 73, 136);
 }
 .input:first-child {
   margin-right: 10px;
