--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,11 @@ main {
   flex-direction: column;
   align-items: center;
 }
+
+.grabbing {
+  cursor: grabbing;
+}
+
 /* Common css */
 
 @media (hover: hover) and (pointer: fine) {
