--- a/src/Pages/Browse/Components/FilterGames/Components/FilterRangeOption/Components/RangeField/Components/RangeKnob/RangeKnob.module.css
+++ b/src/Pages/Browse/Components/FilterGames/Components/FilterRangeOption/Components/RangeField/Components/RangeKnob/RangeKnob.module.css
@@ -1,22 +1,22 @@
 .knobContainer {
   position: absolute;
-  width: 10%;
+  width: 100%;
   left: 0;
   will-change: translate;
-  /* transition: translate linear 70ms; */
   z-index: 0;
+  display: flex;
+  align-items: center;
 }
 
 .knop {
   position: absolute;
-  top: -7.5px;
-  left: -7.5px;
   height: 15px;
+  left: -7.5px;
   width: 15px;
   border-radius: 50%;
   cursor: grab;
   background-color: rgb(0, 104, 202);
-  box-shadow: 0 0 3px 1px rgb(0, 0, 0);
+  box-shadow: 0 0 1px 0px rgb(0, 0, 0);
   user-select: none;
   transition: scale 200ms, background-color 200ms;
 }
