--- a/src/Pages/Browse/Components/FilterGames/Components/FilterRangeOption/Components/RangeField/RangeField/RangeField.module.css
+++ b/src/Pages/Browse/Components/FilterGames/Components/FilterRangeOption/Components/RangeField/RangeField/RangeField.module.css
@@ -9,12 +9,15 @@
   position: relative;
   background-color: rgb(70, 70, 70);
   z-index: 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 .activePath {
   position: absolute;
+  cursor: pointer;
   width: 100%;
   height: 100%;
-  top: 0;
   left: 0;
   z-index: -1;
   transform-origin: 0 0;
