--- a/src/Pages/Browse/Components/FilterGames/Components/FilterRangeOption/Components/RangeInput/Components/RangeInputField/RangeInputField.module.css
+++ b/src/Pages/Browse/Components/FilterGames/Components/FilterRangeOption/Components/RangeInput/Components/RangeInputField/RangeInputField.module.css
@@ -6,6 +6,7 @@
   background-color: #222;
   transition: border 100ms;
   outline: none;
+  user-select: none;
 }
 .input:hover {
   border: 1px solid rgb(6, 73, 136);
