--- a/src/Pages/Browse/Components/FilterGames/Components/FilterOptions/Components/FilterOption/FilterOption.module.css
+++ b/src/Pages/Browse/Components/FilterGames/Components/FilterOptions/Components/FilterOption/FilterOption.module.css
@@ -30,3 +30,9 @@
   height: 1px;
   bottom: -10px;
 }
+.shadow > p {
+  transition: filter 200ms;
+}
+.shadow:hover > p {
+  filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616)) brightness(1.1);
+}
