video player complete

--- a/src/Shared/SecondNavbar/SecondNavBar/SecondNavbar.module.css
+++ b/src/Shared/SecondNavbar/SecondNavBar/SecondNavbar.module.css
@@ -1,32 +1,34 @@
 .SecondNavContainer {
-    width: 100%;
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    background-color: #181818d7;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  padding: 10px 0;
+  z-index: 2;
+  background-color: #181818;
+  display: flex;
+  justify-content: center;
 }
 .SecondNavbar {
-    width: 75vw;
-    padding: 1rem 0;
-    position: relative;
-    max-width: 1600px;
-    display: flex;
-    align-items: center;
+  width: 75vw;
+  padding: 1rem 0;
+  position: relative;
+  max-width: 1600px;
+  display: flex;
+  align-items: center;
 }
 
 @media (max-width: 1023px) and (min-width: 769px) {
-    .SecondNavbar {
-        width: 97vw;
-    }
+  .SecondNavbar {
+    width: 97vw;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    .SecondNavbar {
-        width: 100%;
-        padding: 0;
-        height: 60px;
-        position: relative;
-    }
+  .SecondNavbar {
+    width: 100%;
+    padding: 0;
+    height: 60px;
+    position: relative;
+  }
 }
