--- a/src/Shared/VideoPlayer/Components/Controllers/Components/VideoStatus/VideoStatus.module.css
+++ b/src/Shared/VideoPlayer/Components/Controllers/Components/VideoStatus/VideoStatus.module.css
@@ -26,7 +26,7 @@
   margin-left: 2px;
 }
 .fadeOut {
-  animation: fadeOut 500ms linear 0s infinite normal forwards;
+  animation: fadeOut 600ms linear 0s infinite normal forwards;
 }
 
 .initialPlaceholder {
@@ -34,6 +34,7 @@
   top: 50%;
   left: 50%;
   translate: -50% -50%;
+  border-radius: 35px;
 }
 
 .initialPlaceholderButton {
