--- a/src/Shared/VideoPlayer/Components/Controllers/Controllers/Controllers.module.css
+++ b/src/Shared/VideoPlayer/Components/Controllers/Controllers/Controllers.module.css
@@ -42,7 +42,7 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  cursor: pointer;
+  cursor: default;
   width: 100%;
   height: 100%;
   background: none;
