IndividualGame Banner half complete

--- a/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameBanner/Components/IndividualGameBannerItem/IndividualGameBannerItem.module.css
+++ b/src/Pages/IndividualGame/Components/IndividualGameDetails/Components/IndividualGameBanner/Components/IndividualGameBannerItem/IndividualGameBannerItem.module.css
@@ -1,6 +1,9 @@
 .individualGameBannerItem {
   min-width: 100%;
 }
+.individualGameBannerItem:not(:first-child) {
+  margin-left: 20px;
+}
 .coverImg {
   width: 100%;
 }
